Ranking numbers - Added dynamic visual feedback for list rankings - Fixed Bootstrap class for list gap - Added min-width 0 for Bootstrap columns - Cleaned up rendering and DnD event code - Added more constants for CSS classes - Inlcuded event functions in Sortable config constant

--- a/scss/vendors-extensions/_bootstrap.scss
+++ b/scss/vendors-extensions/_bootstrap.scss
@@ -23,3 +23,7 @@ $gray-900: u.get-gray(900);
 $card-title-color: u.get-primary(700);
 $card-subtitle-color: u.get-primary(900);
 $card-color: u.get-primary(900);
+
+[class^="col"] {
+  min-width: 0;
+}
